# PythonLib

./: .gitignore  LICENSE  README.md  convexOptimization.py  genericClass.py  linkedList.py  makefile  mathFunction.py  pyproject.toml  setup.py  test.py
lycarusLab/: convexOptimization.py  genericClass.py  mathFunction.py  plot.py
lycarusLab/Log/: color.py  hackLog.py  serverLog.py
lyy19Lib/: __init__.py  convexOptimization.py  genericClass.py  linkedList.py  mathFunction.py
数学建模/: mathFunction.py
