[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyy19Lib"
version = "0.1.2"
readme = "README.md"
description = "各种函数和类库"
authors = [{name = "lyy19", email = "lyy2286301015@126.com"}]
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = []

[tool.setuptools]
packages = ["lyy19Lib"]