[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lycarusLab"
version = "2.0.0-alpha.3"
readme = "README.md"
description = "lycarus python codes"
authors = [{name = "lycarus", email = "me@lycarus.cn"}]
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = ["matplotlib"]

[tool.setuptools]
packages = ["lycarusLab"]